// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={194}
      createdAt={0}
      description="Gum"
      id={1}
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={259}
      createdAt={-345600000}
      description="Rent"
      id={2}
      key="2"
      note="Mortguage"
    />
    <ExpenseListItem
      amount={1050}
      createdAt={345600000}
      description="Credit Cards"
      id={3}
      key="3"
      note="More Bills"
    />
  </div>
</div>
`;

exports[`should reneder ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item__message"
    >
      <span>
        No Expenses
      </span>
    </div>
  </div>
</div>
`;
